--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,25 @@
-body{
+.inner-body{
     background-color: #B5DEFF;
+    padding-left: 4%;
+    padding-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 5%;
+}
+.center{
+    position:relative;
+    left:30%;
+}
+.img{
+    padding: 0.5%;
+    width:70%;
+    height:20%;
+    margin-left:5%;
+}
+
+.logo{
+    position: absolute;
+    width: 50%;
+    height: 30%;
+    top:35%;
+    right:10%;
 }
